[gd_scene load_steps=12 format=3 uid="uid://b8jiupe27ya0t"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_gsy7k"]
[ext_resource type="PackedScene" uid="uid://vmshcyept0m3" path="res://scenes/ui/sound_button.tscn" id="2_nfbfn"]
[ext_resource type="AudioStream" uid="uid://btske473tbbxj" path="res://assets/audio/clay_game_over_song.wav" id="3_itcwe"]
[ext_resource type="Theme" uid="uid://c68jswlqug24f" path="res://resources/theme/theme.tres" id="4_uqcu7"]
[ext_resource type="AudioStream" uid="uid://deyab506ggkem" path="res://assets/audio/clay_win_song.wav" id="4_w8263"]

[sub_resource type="Animation" id="Animation_f2f0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MarginContainer/Control/PanelContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(546, 302)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer/Control/PanelContainer:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer/Control/PanelContainer:pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(254, 147)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MarginContainer/Control/PanelContainer:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../MarginContainer/Control/PanelContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6igln"]
resource_name = "defeat"
length = 1.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MarginContainer/Control/PanelContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.416667, 0.916667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(546, -300), Vector2(546, 302), Vector2(546, 302), Vector2(546, 302)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MarginContainer/Control/PanelContainer:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, -0.436332, 0.436332]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer/Control/PanelContainer:pivot_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 295)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer/Control/PanelContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bnpun"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fcyfd"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8j01w"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MarginContainer/Control/PanelContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1.4, 1.4), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MarginContainer/Control/PanelContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 900), Vector2(341.25, 100), Vector2(700, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer/Control/PanelContainer:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.14159, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer/Control/PanelContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_be7v1"]
_data = {
"RESET": SubResource("Animation_f2f0a"),
"defeat": SubResource("Animation_6igln"),
"in": SubResource("Animation_bnpun"),
"out": SubResource("Animation_fcyfd"),
"win": SubResource("Animation_8j01w")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gsy7k")

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_itcwe")
volume_db = -10.0

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w8263")
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_be7v1")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("4_uqcu7")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control"]
unique_name_in_owner = true
self_modulate = Color(1, 0.160784, 0.172549, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 546.0
offset_top = 302.0
offset_right = 1113.0
offset_bottom = 1128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(254, 147)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Solid3DPanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control/PanelContainer/VBoxContainer"]
self_modulate = Color(0.690196, 0.160784, 1, 1)
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Solid3DPanelContainer"

[node name="TitleLabel" type="Label" parent="MarginContainer/Control/PanelContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 60
text = "victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 35
text = "you won"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/Control/PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_nfbfn")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "restart"

[node name="QuitButton" parent="MarginContainer/Control/PanelContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_nfbfn")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "menu"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="MarginContainer/Control/PanelContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/PanelContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
